ADDED images template

--- a/index.html
+++ b/index.html
@@ -77,6 +77,82 @@
             </div>
         </div>
 
+        <div class="wrap" style="overflow: hidden;margin: 10px;">
+            <!-- Define all of the tiles: -->
+            <div class="box" style="float: left;position: relative;width: 20%;padding-bottom: 20%;">
+                <div class="boxInner" style="position: absolute;left: 10px;right: 10px;top: 10px;bottom: 10px;overflow: hidden;">
+                    <img src="http://www.dwuser.com/education/content/creating-responsive-tiled-layout-with-pure-css/images/demo/7.jpg" style="width: 100%;">
+                    <div class="titleBox" style="position: absolute;bottom: 0;left: 0;right: 0;margin-bottom: -50px;background: rgba(0, 0, 0, 0.5);color: #FFF;padding: 10px;text-align: center;-webkit-transition: all 0.3s ease-out;-moz-transition: all 0.3s ease-out;-o-transition: all 0.3s ease-out;transition: all 0.3s ease-out;">Butterfly</div>
+                </div>
+            </div>
+            <div class="box" style="float: left;position: relative;width: 20%;padding-bottom: 20%;">
+                <div class="boxInner" style="position: absolute;left: 10px;right: 10px;top: 10px;bottom: 10px;overflow: hidden;">
+                    <img src="http://www.dwuser.com/education/content/creating-responsive-tiled-layout-with-pure-css/images/demo/1.jpg" style="width: 100%;">
+                    <div class="titleBox" style="position: absolute;bottom: 0;left: 0;right: 0;margin-bottom: -50px;background: rgba(0, 0, 0, 0.5);color: #FFF;padding: 10px;text-align: center;-webkit-transition: all 0.3s ease-out;-moz-transition: all 0.3s ease-out;-o-transition: all 0.3s ease-out;transition: all 0.3s ease-out;">An old greenhouse</div>
+                </div>
+            </div>
+            <div class="box" style="float: left;position: relative;width: 20%;padding-bottom: 20%;">
+                <div class="boxInner" style="position: absolute;left: 10px;right: 10px;top: 10px;bottom: 10px;overflow: hidden;">
+                    <img src="http://www.dwuser.com/education/content/creating-responsive-tiled-layout-with-pure-css/images/demo/2.jpg" style="width: 100%;">
+                    <div class="titleBox" style="position: absolute;bottom: 0;left: 0;right: 0;margin-bottom: -50px;background: rgba(0, 0, 0, 0.5);color: #FFF;padding: 10px;text-align: center;-webkit-transition: all 0.3s ease-out;-moz-transition: all 0.3s ease-out;-o-transition: all 0.3s ease-out;transition: all 0.3s ease-out;">Purple wildflowers</div>
+                </div>
+            </div>
+            <div class="box" style="float: left;position: relative;width: 20%;padding-bottom: 20%;">
+                <div class="boxInner" style="position: absolute;left: 10px;right: 10px;top: 10px;bottom: 10px;overflow: hidden;">
+                    <img src="http://www.dwuser.com/education/content/creating-responsive-tiled-layout-with-pure-css/images/demo/3.jpg" style="width: 100%;">
+                    <div class="titleBox" style="position: absolute;bottom: 0;left: 0;right: 0;margin-bottom: -50px;background: rgba(0, 0, 0, 0.5);color: #FFF;padding: 10px;text-align: center;-webkit-transition: all 0.3s ease-out;-moz-transition: all 0.3s ease-out;-o-transition: all 0.3s ease-out;transition: all 0.3s ease-out;">A birdfeeder</div>
+                </div>
+            </div>
+            <div class="box" style="float: left;position: relative;width: 20%;padding-bottom: 20%;">
+                <div class="boxInner" style="position: absolute;left: 10px;right: 10px;top: 10px;bottom: 10px;overflow: hidden;">
+                    <img src="http://www.dwuser.com/education/content/creating-responsive-tiled-layout-with-pure-css/images/demo/10.jpg" style="width: 100%;">
+                    <div class="titleBox" style="position: absolute;bottom: 0;left: 0;right: 0;margin-bottom: -50px;background: rgba(0, 0, 0, 0.5);color: #FFF;padding: 10px;text-align: center;-webkit-transition: all 0.3s ease-out;-moz-transition: all 0.3s ease-out;-o-transition: all 0.3s ease-out;transition: all 0.3s ease-out;">Crocus close-up</div>
+                </div>
+            </div>
+            <div class="box" style="float: left;position: relative;width: 20%;padding-bottom: 20%;">
+                <div class="boxInner" style="position: absolute;left: 10px;right: 10px;top: 10px;bottom: 10px;overflow: hidden;">
+                    <img src="http://www.dwuser.com/education/content/creating-responsive-tiled-layout-with-pure-css/images/demo/4.jpg" style="width: 100%;">
+                    <div class="titleBox" style="position: absolute;bottom: 0;left: 0;right: 0;margin-bottom: -50px;background: rgba(0, 0, 0, 0.5);color: #FFF;padding: 10px;text-align: center;-webkit-transition: all 0.3s ease-out;-moz-transition: all 0.3s ease-out;-o-transition: all 0.3s ease-out;transition: all 0.3s ease-out;">The garden shop</div>
+                </div>
+            </div>
+            <div class="box" style="float: left;position: relative;width: 20%;padding-bottom: 20%;">
+                <div class="boxInner" style="position: absolute;left: 10px;right: 10px;top: 10px;bottom: 10px;overflow: hidden;">
+                    <img src="http://www.dwuser.com/education/content/creating-responsive-tiled-layout-with-pure-css/images/demo/5.jpg" style="width: 100%;">
+                    <div class="titleBox" style="position: absolute;bottom: 0;left: 0;right: 0;margin-bottom: -50px;background: rgba(0, 0, 0, 0.5);color: #FFF;padding: 10px;text-align: center;-webkit-transition: all 0.3s ease-out;-moz-transition: all 0.3s ease-out;-o-transition: all 0.3s ease-out;transition: all 0.3s ease-out;">Spring daffodils</div>
+                </div>
+            </div>
+            <div class="box" style="float: left;position: relative;width: 20%;padding-bottom: 20%;">
+                <div class="boxInner" style="position: absolute;left: 10px;right: 10px;top: 10px;bottom: 10px;overflow: hidden;">
+                    <img src="http://www.dwuser.com/education/content/creating-responsive-tiled-layout-with-pure-css/images/demo/6.jpg" style="width: 100%;">
+                    <div class="titleBox" style="position: absolute;bottom: 0;left: 0;right: 0;margin-bottom: -50px;background: rgba(0, 0, 0, 0.5);color: #FFF;padding: 10px;text-align: center;-webkit-transition: all 0.3s ease-out;-moz-transition: all 0.3s ease-out;-o-transition: all 0.3s ease-out;transition: all 0.3s ease-out;">Iris along the path</div>
+                </div>
+            </div>
+            <div class="box" style="float: left;position: relative;width: 20%;padding-bottom: 20%;">
+                <div class="boxInner" style="position: absolute;left: 10px;right: 10px;top: 10px;bottom: 10px;overflow: hidden;">
+                    <img src="http://www.dwuser.com/education/content/creating-responsive-tiled-layout-with-pure-css/images/demo/8.jpg" style="width: 100%;">
+                    <div class="titleBox" style="position: absolute;bottom: 0;left: 0;right: 0;margin-bottom: -50px;background: rgba(0, 0, 0, 0.5);color: #FFF;padding: 10px;text-align: center;-webkit-transition: all 0.3s ease-out;-moz-transition: all 0.3s ease-out;-o-transition: all 0.3s ease-out;transition: all 0.3s ease-out;">The garden blueprint</div>
+                </div>
+            </div>
+            <div class="box" style="float: left;position: relative;width: 20%;padding-bottom: 20%;">
+                <div class="boxInner" style="position: absolute;left: 10px;right: 10px;top: 10px;bottom: 10px;overflow: hidden;">
+                    <img src="http://www.dwuser.com/education/content/creating-responsive-tiled-layout-with-pure-css/images/demo/9.jpg" style="width: 100%;">
+                    <div class="titleBox" style="position: absolute;bottom: 0;left: 0;right: 0;margin-bottom: -50px;background: rgba(0, 0, 0, 0.5);color: #FFF;padding: 10px;text-align: center;-webkit-transition: all 0.3s ease-out;-moz-transition: all 0.3s ease-out;-o-transition: all 0.3s ease-out;transition: all 0.3s ease-out;">The patio</div>
+                </div>
+            </div>
+            <div class="box" style="float: left;position: relative;width: 20%;padding-bottom: 20%;">
+                <div class="boxInner" style="position: absolute;left: 10px;right: 10px;top: 10px;bottom: 10px;overflow: hidden;">
+                    <img src="http://www.dwuser.com/education/content/creating-responsive-tiled-layout-with-pure-css/images/demo/11.jpg" style="width: 100%;">
+                    <div class="titleBox" style="position: absolute;bottom: 0;left: 0;right: 0;margin-bottom: -50px;background: rgba(0, 0, 0, 0.5);color: #FFF;padding: 10px;text-align: center;-webkit-transition: all 0.3s ease-out;-moz-transition: all 0.3s ease-out;-o-transition: all 0.3s ease-out;transition: all 0.3s ease-out;">Bumble bee collecting nectar</div>
+                </div>
+            </div>
+            <div class="box" style="float: left;position: relative;width: 20%;padding-bottom: 20%;">
+                <div class="boxInner" style="position: absolute;left: 10px;right: 10px;top: 10px;bottom: 10px;overflow: hidden;">
+                    <img src="http://www.dwuser.com/education/content/creating-responsive-tiled-layout-with-pure-css/images/demo/12.jpg" style="width: 100%;">
+                    <div class="titleBox" style="position: absolute;bottom: 0;left: 0;right: 0;margin-bottom: -50px;background: rgba(0, 0, 0, 0.5);color: #FFF;padding: 10px;text-align: center;-webkit-transition: all 0.3s ease-out;-moz-transition: all 0.3s ease-out;-o-transition: all 0.3s ease-out;transition: all 0.3s ease-out;">Winding garden path</div>
+                </div>
+            </div>
+        </div>
+        
         <div class="row" style="padding-left: 10px !important;padding-right: 10px !important;">
             <div class="col-lg-12 portfolio-item" style="margin-bottom: 25px;">
                 <div class="block-header" style="background: #B31820;color: white;padding: 7px 20px 7px 20px;text-transform: uppercase;font-weight: bold;font-size: 17px;margin-bottom: 10px;width: 120% !important;">Root Causes</div>
