--- a/orig.html
+++ b/orig.html
@@ -29,81 +29,174 @@
 
 <body>
 
-<div class="wrap">
-            <!-- Define all of the tiles: -->
-            <div class="box">
-                <div class="boxInner">
-                    <img src="http://www.dwuser.com/education/content/creating-responsive-tiled-layout-with-pure-css/images/demo/7.jpg">
-                    <div class="titleBox">Butterfly</div>
-                </div>
-            </div>
-            <div class="box">
-                <div class="boxInner">
-                    <img src="http://www.dwuser.com/education/content/creating-responsive-tiled-layout-with-pure-css/images/demo/1.jpg">
-                    <div class="titleBox">An old greenhouse</div>
-                </div>
-            </div>
-            <div class="box">
-                <div class="boxInner">
-                    <img src="http://www.dwuser.com/education/content/creating-responsive-tiled-layout-with-pure-css/images/demo/2.jpg">
-                    <div class="titleBox">Purple wildflowers</div>
-                </div>
-            </div>
-            <div class="box">
-                <div class="boxInner">
-                    <img src="http://www.dwuser.com/education/content/creating-responsive-tiled-layout-with-pure-css/images/demo/3.jpg">
-                    <div class="titleBox">A birdfeeder</div>
-                </div>
-            </div>
-            <div class="box">
-                <div class="boxInner">
-                    <img src="http://www.dwuser.com/education/content/creating-responsive-tiled-layout-with-pure-css/images/demo/10.jpg">
-                    <div class="titleBox">Crocus close-up</div>
-                </div>
-            </div>
-            <div class="box">
-                <div class="boxInner">
-                    <img src="http://www.dwuser.com/education/content/creating-responsive-tiled-layout-with-pure-css/images/demo/4.jpg">
-                    <div class="titleBox">The garden shop</div>
-                </div>
-            </div>
-            <div class="box">
-                <div class="boxInner">
-                    <img src="http://www.dwuser.com/education/content/creating-responsive-tiled-layout-with-pure-css/images/demo/5.jpg">
-                    <div class="titleBox">Spring daffodils</div>
-                </div>
-            </div>
-            <div class="box">
-                <div class="boxInner">
-                    <img src="http://www.dwuser.com/education/content/creating-responsive-tiled-layout-with-pure-css/images/demo/6.jpg">
-                    <div class="titleBox">Iris along the path</div>
-                </div>
-            </div>
-            <div class="box">
-                <div class="boxInner">
-                    <img src="http://www.dwuser.com/education/content/creating-responsive-tiled-layout-with-pure-css/images/demo/8.jpg">
-                    <div class="titleBox">The garden blueprint</div>
-                </div>
-            </div>
-            <div class="box">
-                <div class="boxInner">
-                    <img src="http://www.dwuser.com/education/content/creating-responsive-tiled-layout-with-pure-css/images/demo/9.jpg">
-                    <div class="titleBox">The patio</div>
-                </div>
-            </div>
-            <div class="box">
-                <div class="boxInner">
-                    <img src="http://www.dwuser.com/education/content/creating-responsive-tiled-layout-with-pure-css/images/demo/11.jpg">
-                    <div class="titleBox">Bumble bee collecting nectar</div>
-                </div>
-            </div>
-            <div class="box">
-                <div class="boxInner">
-                    <img src="http://www.dwuser.com/education/content/creating-responsive-tiled-layout-with-pure-css/images/demo/12.jpg">
-                    <div class="titleBox">Winding garden path</div>
-                </div>
+    <!-- Page Content -->
+    <div class="container">
+        <br>
+        <!-- Begin Open in browser -->
+        <img src="https://iamdevlinph.github.io/AIcasesharing/ailogo.png">
+        <!-- End open in browser -->
+
+        <!-- Begin Newsletter Image -->
+        <div>
+            <div class="image">
+                <div class="block-intro" style="font-size:50px!important;padding-top:30px!important;line-height:1.1!important;">Case Sharing<br>Title: Client's Name - Subject - Date</div>
             </div>
         </div>
+        <!-- End Newsletter Image -->
+
+        <!-- Begin Block Header -->
+        <div class="row">
+            <div class="col-lg-12 portfolio-item">
+                <div class="block-header">Case Description</div>
+            </div>
+        </div>
+        <!-- End Block Header -->
+
+        <!-- Begin Block Content -->
+        <div class="row">
+            <div class="col-lg-12 portfolio-item">
+                <div class="block-intro">
+                    Inspection Information:
+                </div>
+                <div class="block-intro">
+                    Expected Outcome:
+                </div>
+                <center>
+                    <img class="img-responsive" src="http://placehold.it/700x400" alt="">
+                </center>
+                <br>
+                <div class="block-intro">
+                    Final Outcome:
+                </div>
+                <div class="block-intro">
+                    Results or Impacts:
+                </div>
+                <center>
+                    <img class="img-responsive" src="http://placehold.it/700x400" alt="">
+                </center>
+            </div>
+        </div>
+        <!-- End Block Content -->
+
+        <div class="row">
+            <div class="col-lg-12 portfolio-item">
+                <div class="block-header">Root Causes</div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-12 portfolio-item">
+                <p class="p-sharing">Clarify the reasons why inspector made mistakes: GI, IP not clear enough? Lack of training? Inspector missed key points of inspection? Keep ask the reasons behind, do not stop at the first “why”. (see the example below)</p>
+                <table class="table table-bordered table-striped">
+                    <thead>
+                        <tr>
+                            <th>Problem</th>
+                            <th>Why</th>
+                            <th>Why</th>
+                            <th>Why</th>
+                            <th>Why</th>
+                            <th>Why</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>&nbsp;</td>
+                            <td>&nbsp;</td>
+                            <td>&nbsp;</td>
+                            <td>&nbsp;</td>
+                            <td>&nbsp;</td>
+                            <td>&nbsp;</td>
+                        </tr>
+                        <tr>
+                            <td>&nbsp;</td>
+                            <td>&nbsp;</td>
+                            <td>&nbsp;</td>
+                            <td>&nbsp;</td>
+                            <td>&nbsp;</td>
+                            <td>&nbsp;</td>
+                        </tr>
+                        <tr>
+                            <td>&nbsp;</td>
+                            <td>&nbsp;</td>
+                            <td>&nbsp;</td>
+                            <td>&nbsp;</td>
+                            <td>&nbsp;</td>
+                            <td>&nbsp;</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-lg-12 portfolio-item">
+                <div class="block-header">Corrective Actions</div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-12 portfolio-item">
+                <table class="table table-bordered table-striped">
+                    <thead>
+                        <tr>
+                            <th>Action</th>
+                            <th>Responsible</th>
+                            <th>Implement Date</th>
+                            <th width="500px">Comments</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>&nbsp;</td>
+                            <td>&nbsp;</td>
+                            <td>&nbsp;</td>
+                            <td>&nbsp;</td>
+                        </tr>
+                        <tr>
+                            <td>&nbsp;</td>
+                            <td>&nbsp;</td>
+                            <td>&nbsp;</td>
+                            <td>&nbsp;</td>
+                        </tr>
+                        <tr>
+                            <td>&nbsp;</td>
+                            <td>&nbsp;</td>
+                            <td>&nbsp;</td>
+                            <td>&nbsp;</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-lg-12 portfolio-item">
+                <div class="block-header">Summary</div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-lg-12 portfolio-item">
+                <div class="block-header">For any questions, please contact:</div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-lg-12 portfolio-item">
+                <div class="block-intro">Name:</div><p class="contact-details">Devlin Pajaron</p>
+                <div class="block-intro">Email:</div><p class="contact-details">devlin.pajaron@asiainspection.com</p>
+                <div class="block-intro">Tel:</div><p class="contact-details">236 74214</p>
+            </div>
+        </div>
+
+    </div>
+
+    <!-- Begin Scripts -->
+    <!-- jQuery -->
+    <script src="https://iamdevlinph.github.io/AIcasesharing/js/jquery.js"></script>
+    <script src="https://iamdevlinph.github.io/AIcasesharing/js/bootstrap.min.js"></script>
+    <script src="https://iamdevlinph.github.io/AIcasesharing/js/custom.js"></script>
+
 </body>
 
 </html>
