--- a/index.html
+++ b/index.html
@@ -81,61 +81,61 @@
             <!-- Define all of the tiles: -->
             <div class="box" style="float: left;position: relative;width: 20%;padding-bottom: 20%;">
                 <div class="boxInner" style="position: absolute;left: 10px;right: 10px;top: 10px;bottom: 10px;overflow: hidden;">
-                    <img src="http://placehold.it/400x500" style="width: 100%;">
+                    <img src="https://placeholdit.imgix.net/~text?txtsize=38&txt=sample&w=400&h=500" style="width: 100%;">
                     <div class="titleBox" style="position: absolute;bottom: 0;left: 0;right: 0;margin-bottom: -50px;background: rgba(0, 0, 0, 0.5);color: #FFF;padding: 10px;text-align: center;-webkit-transition: all 0.3s ease-out;-moz-transition: all 0.3s ease-out;-o-transition: all 0.3s ease-out;transition: all 0.3s ease-out;">Butterfly</div>
                 </div>
             </div>
             <div class="box" style="float: left;position: relative;width: 20%;padding-bottom: 20%;">
                 <div class="boxInner" style="position: absolute;left: 10px;right: 10px;top: 10px;bottom: 10px;overflow: hidden;">
-                    <img src="http://placehold.it/400x500" style="width: 100%;">
+                    <img src="https://placeholdit.imgix.net/~text?txtsize=38&txt=sample&w=400&h=500" style="width: 100%;">
                     <div class="titleBox" style="position: absolute;bottom: 0;left: 0;right: 0;margin-bottom: -50px;background: rgba(0, 0, 0, 0.5);color: #FFF;padding: 10px;text-align: center;-webkit-transition: all 0.3s ease-out;-moz-transition: all 0.3s ease-out;-o-transition: all 0.3s ease-out;transition: all 0.3s ease-out;">An old greenhouse</div>
                 </div>
             </div>
             <div class="box" style="float: left;position: relative;width: 20%;padding-bottom: 20%;">
                 <div class="boxInner" style="position: absolute;left: 10px;right: 10px;top: 10px;bottom: 10px;overflow: hidden;">
-                    <img src="http://placehold.it/400x500" style="width: 100%;">
+                    <img src="https://placeholdit.imgix.net/~text?txtsize=38&txt=sample&w=400&h=500" style="width: 100%;">
                     <div class="titleBox" style="position: absolute;bottom: 0;left: 0;right: 0;margin-bottom: -50px;background: rgba(0, 0, 0, 0.5);color: #FFF;padding: 10px;text-align: center;-webkit-transition: all 0.3s ease-out;-moz-transition: all 0.3s ease-out;-o-transition: all 0.3s ease-out;transition: all 0.3s ease-out;">Purple wildflowers</div>
                 </div>
             </div>
             <div class="box" style="float: left;position: relative;width: 20%;padding-bottom: 20%;">
                 <div class="boxInner" style="position: absolute;left: 10px;right: 10px;top: 10px;bottom: 10px;overflow: hidden;">
-                    <img src="http://placehold.it/400x500" style="width: 100%;">
+                    <img src="https://placeholdit.imgix.net/~text?txtsize=38&txt=sample&w=400&h=500" style="width: 100%;">
                     <div class="titleBox" style="position: absolute;bottom: 0;left: 0;right: 0;margin-bottom: -50px;background: rgba(0, 0, 0, 0.5);color: #FFF;padding: 10px;text-align: center;-webkit-transition: all 0.3s ease-out;-moz-transition: all 0.3s ease-out;-o-transition: all 0.3s ease-out;transition: all 0.3s ease-out;">A birdfeeder</div>
                 </div>
             </div>
             <div class="box" style="float: left;position: relative;width: 20%;padding-bottom: 20%;">
                 <div class="boxInner" style="position: absolute;left: 10px;right: 10px;top: 10px;bottom: 10px;overflow: hidden;">
-                    <img src="http://placehold.it/400x500" style="width: 100%;">
+                    <img src="https://placeholdit.imgix.net/~text?txtsize=38&txt=sample&w=400&h=500" style="width: 100%;">
                     <div class="titleBox" style="position: absolute;bottom: 0;left: 0;right: 0;margin-bottom: -50px;background: rgba(0, 0, 0, 0.5);color: #FFF;padding: 10px;text-align: center;-webkit-transition: all 0.3s ease-out;-moz-transition: all 0.3s ease-out;-o-transition: all 0.3s ease-out;transition: all 0.3s ease-out;">Crocus close-up</div>
                 </div>
             </div>
             <div class="box" style="float: left;position: relative;width: 20%;padding-bottom: 20%;">
                 <div class="boxInner" style="position: absolute;left: 10px;right: 10px;top: 10px;bottom: 10px;overflow: hidden;">
-                    <img src="http://placehold.it/400x500" style="width: 100%;">
+                    <img src="https://placeholdit.imgix.net/~text?txtsize=38&txt=sample&w=400&h=500" style="width: 100%;">
                     <div class="titleBox" style="position: absolute;bottom: 0;left: 0;right: 0;margin-bottom: -50px;background: rgba(0, 0, 0, 0.5);color: #FFF;padding: 10px;text-align: center;-webkit-transition: all 0.3s ease-out;-moz-transition: all 0.3s ease-out;-o-transition: all 0.3s ease-out;transition: all 0.3s ease-out;">The garden shop</div>
                 </div>
             </div>
             <div class="box" style="float: left;position: relative;width: 20%;padding-bottom: 20%;">
                 <div class="boxInner" style="position: absolute;left: 10px;right: 10px;top: 10px;bottom: 10px;overflow: hidden;">
-                    <img src="http://placehold.it/400x500" style="width: 100%;">
+                    <img src="https://placeholdit.imgix.net/~text?txtsize=38&txt=sample&w=400&h=500" style="width: 100%;">
                     <div class="titleBox" style="position: absolute;bottom: 0;left: 0;right: 0;margin-bottom: -50px;background: rgba(0, 0, 0, 0.5);color: #FFF;padding: 10px;text-align: center;-webkit-transition: all 0.3s ease-out;-moz-transition: all 0.3s ease-out;-o-transition: all 0.3s ease-out;transition: all 0.3s ease-out;">Spring daffodils</div>
                 </div>
             </div>
             <div class="box" style="float: left;position: relative;width: 20%;padding-bottom: 20%;">
                 <div class="boxInner" style="position: absolute;left: 10px;right: 10px;top: 10px;bottom: 10px;overflow: hidden;">
-                    <img src="http://placehold.it/400x500" style="width: 100%;">
+                    <img src="https://placeholdit.imgix.net/~text?txtsize=38&txt=sample&w=400&h=500" style="width: 100%;">
                     <div class="titleBox" style="position: absolute;bottom: 0;left: 0;right: 0;margin-bottom: -50px;background: rgba(0, 0, 0, 0.5);color: #FFF;padding: 10px;text-align: center;-webkit-transition: all 0.3s ease-out;-moz-transition: all 0.3s ease-out;-o-transition: all 0.3s ease-out;transition: all 0.3s ease-out;">Iris along the path</div>
                 </div>
             </div>
             <div class="box" style="float: left;position: relative;width: 20%;padding-bottom: 20%;">
                 <div class="boxInner" style="position: absolute;left: 10px;right: 10px;top: 10px;bottom: 10px;overflow: hidden;">
-                    <img src="http://placehold.it/400x500" style="width: 100%;">
+                    <img src="https://placeholdit.imgix.net/~text?txtsize=38&txt=sample&w=400&h=500" style="width: 100%;">
                     <div class="titleBox" style="position: absolute;bottom: 0;left: 0;right: 0;margin-bottom: -50px;background: rgba(0, 0, 0, 0.5);color: #FFF;padding: 10px;text-align: center;-webkit-transition: all 0.3s ease-out;-moz-transition: all 0.3s ease-out;-o-transition: all 0.3s ease-out;transition: all 0.3s ease-out;">The garden blueprint</div>
                 </div>
             </div>
             <div class="box" style="float: left;position: relative;width: 20%;padding-bottom: 20%;">
                 <div class="boxInner" style="position: absolute;left: 10px;right: 10px;top: 10px;bottom: 10px;overflow: hidden;">
-                    <img src="http://placehold.it/400x500" style="width: 100%;">
+                    <img src="https://placeholdit.imgix.net/~text?txtsize=38&txt=sample&w=400&h=500" style="width: 100%;">
                     <div class="titleBox" style="position: absolute;bottom: 0;left: 0;right: 0;margin-bottom: -50px;background: rgba(0, 0, 0, 0.5);color: #FFF;padding: 10px;text-align: center;-webkit-transition: all 0.3s ease-out;-moz-transition: all 0.3s ease-out;-o-transition: all 0.3s ease-out;transition: all 0.3s ease-out;">The patio</div>
                 </div>
             </div>
